--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -60,7 +60,7 @@
   <script>
     const jokes = [
       { setup: "Vad är älgarnas favoritmat?", punchline: "Potatismoose." },
-      { setup: "Vem är älgens favoritsläkting?", punchline: "Moostern." },
+      { setup: "Vem är älgens favoritsläkting?", punchline: "Mooster Britta." },
       { setup: "Vilken del av veckan gillar älgen bäst?", punchline: "Hälgen." },
       { setup: "Vilken är älgens favoritfågel?", punchline: "Fiskmoosen." },
       { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen." },
@@ -88,6 +88,7 @@
       { setup: "Varför finns det så många boxande älgar?", punchline: "För att i ringen försöker de alltid göra moose av varandra." },
       { setup: "Vad säger älgen när den har piffat klart?", punchline: "Det där var grädden på mooset." },
       { setup: "Var handlar älgen när den är på besök i huvudstaden?", punchline: "På MOOSE." },
+      { setup: "Vad äter de grekiska älgarna till middag?", punchline: "Mooseaka." },
     ];
 
     function showRandomJoke() {
@@ -132,7 +133,7 @@
 
   <!---<br><br><br><br><br><br><br><br><br><br>
   <footer>
-    <p>&copy; Nordner Moose Inc. 2025</p>
+    <p>&copy; Nordstnerberg Moose Inc. 2025</p>
   </footer>-->
 
 </body>
