--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -89,6 +89,11 @@
       { setup: "Vad säger älgen när den har piffat klart?", punchline: "Det där var grädden på mooset." },
       { setup: "Var handlar älgen när den är på besök i huvudstaden?", punchline: "På MOOSE." },
       { setup: "Vad äter de grekiska älgarna till middag?", punchline: "Mooseaka." },
+
+      { setup: "Varför tycker älgarna inte om stolpiller?", punchline: "De är så svåra att svälga." },
+      { setup: "Vad kallas en troende älg?", punchline: "Mooslim" },
+      { setup: "Vilken är älgarnas favoritsång vid jul?", punchline: "O hälga natt." },
+      { setup: "Varför blir älgen så bakfull efter en fest?", punchline: "De håller alltid på och bälgar i sig." }
     ];
 
     function showRandomJoke() {
