--- a/moose-jokes/OLD/index.html
+++ b/moose-jokes/OLD/index.html
@@ -92,8 +92,10 @@
       { setup: "Varför tycker älgarna inte om stolpiller?", punchline: "De är så svåra att svälga." },
       { setup: "Vad kallas en troende älg?", punchline: "Mooslim" },
       { setup: "Vilken är älgarnas favoritsång vid jul?", punchline: "O hälga natt." },
-      { setup: "Varför blir älgen så bakfull efter en fest?", punchline: "De håller alltid på och bälgar i sig." }
+      { setup: "Varför blir älgen så bakfull efter en fest?", punchline: "De håller alltid på och bälgar i sig." },
+      { setup: "Vilken är älgens favoritfilm?", punchline: "ÄVP: Älgen versus predator." } // kredd T.N.
     ];
+
 
     function showRandomJoke() {
       const jokeContainer = document.getElementById("joke");
