--- a/moose-jokes/OLD/index.html
+++ b/moose-jokes/OLD/index.html
@@ -124,7 +124,21 @@
 
 <body onload="showRandomJoke()">
 
-  <img src="imgs/moose-cow.png" alt="Moose cow">
+  <img id="mooseImage" alt="Moose cow">
+
+  <script>
+
+    let today = new Date();
+    let day = today.getDate();
+
+    let mooseImage = document.getElementById("mooseImage");
+
+    if (day % 2 === 0) {
+      mooseImage.src = "imgs/moose-cow2.png";
+    } else {
+      mooseImage.src = "imgs/moose-cow.png";
+    }
+  </script>
 
   <div class="joke-container" id="joke">
 
