--- a/moose-jokes/OLD/index.html
+++ b/moose-jokes/OLD/index.html
@@ -94,7 +94,7 @@
       { setup: "Vilken är älgarnas favoritsång vid jul?", punchline: "O hälga natt." },
       { setup: "Varför blir älgen så bakfull efter en fest?", punchline: "De håller alltid på och bälgar i sig." },
       { setup: "Vilken är älgens favoritfilm?", punchline: "ÄVP: Älgen versus predator." }, // kredd T.N.
-      { setup: "Vad skriver älgen under fotbollsmatchen?", punchline: "Framåt med er. Vamoose!" }
+      { setup: "Vad skriker älgen under fotbollsmatchen?", punchline: "Framåt med er. Vamoose!" }
     ];
 
 
